--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "tailwindui-template",
+  "name": "kylewigs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "sso": "aws sso login --sso-session=personal --no-browser",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^4.0.0",
+    "sst": "3.1.48",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
