--- a/package.json
+++ b/package.json
@@ -1,49 +1,26 @@
 {
-  "name": "kylewigs",
+  "name": "blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "sso": "aws sso login --sso-session=personal --no-browser",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
-  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@mapbox/rehype-prism": "^0.9.0",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^14.2.20",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.17.10",
-    "@types/react": "^18.3.16",
-    "@types/react-dom": "^18.3.5",
-    "@types/webpack-env": "^1.18.5",
-    "autoprefixer": "^10.4.20",
-    "cheerio": "^1.0.0",
-    "clsx": "^2.1.1",
-    "fast-glob": "^3.3.2",
-    "feed": "^4.2.2",
-    "next": "^14.2.20",
-    "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "remark-gfm": "^4.0.0",
-    "sst": "3.3.24",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.20",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "sharp": "0.33.1"
-  },
-  "packageManager": "bun@1.1.10",
-  "engine": {
-    "node": "22.5.1"
+    "@content-collections/core": "^0.7.3",
+    "@content-collections/next": "^0.2.4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
