--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@rehype-pretty/transformers": "^0.13.2",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/edge": "^1.2.1",
     "@vercel/functions": "^1.6.0",
     "clsx": "^2.1.1",
