--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "npm run lint && npm run mdx:timestamps && next build",
     "start": "next start",
     "postbuild": "next-sitemap",
@@ -17,7 +17,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^14.2.24",
+    "@next/mdx": "15.2.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -35,15 +35,15 @@
     "lucide": "^0.452.0",
     "lucide-react": "^0.452.0",
     "motion": "^12.4.10",
-    "next": "14.2.21",
+    "next": "15.2.1",
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "next-view-transitions": "^0.3.4",
     "path": "^0.12.7",
     "postcss-nested": "^6.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "reading-time-estimator": "^1.11.0",
     "rehype-highlight": "^7.0.2",
     "rehype-pretty-code": "^0.14.0",
@@ -63,10 +63,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.13.9",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "eslint": "^9.21.0",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.2.1",
     "husky": "^9.1.7",
     "postcss": "^8.5.3",
     "prettier": "3.3.3",
@@ -77,5 +77,9 @@
     "tailwindcss": "^4.0.9",
     "typescript": "^5.8.2"
   },
-  "trustedDependencies": ["@biomejs/biome"]
+  "trustedDependencies": ["@biomejs/biome"],
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
+  }
 }
