--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge": "^1.2.1",
     "@vercel/functions": "^1.6.0",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "create-stylelint": "^0.5.0",
     "fs": "^0.0.2",
